--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ dj-database-url==2.3.0
 dj-email-url==1.0.6
 Django==5.1.4
 django-cache-url==3.4.5
+django-debug-toolbar==4.3.0
+djangorestframework==3.15.2
 environs==11.2.1
 factory_boy==3.3.1
 Faker==33.1.0
